2007-03-11  Ethan Merritt  <merritt@u.washington.edu>
	
	* src/gadgets.c src/gadgets.h src/graph3d.c src/graphics.c src/save.c
	src/set.c src/show.c src/unset.c src/util3d.c:  Add option to specify
	plot margins as an absolute position on the canvas (screen).
	    set {lrbt}margin screen <frac>
	Back-port of CVS patches from 2006-10-21 2006-11-04 2008-03-06

2007-03-08  Ethan Merritt  <merritt@u.washington.edu>

	Version 4.2.3 release
	Any further commits to this tree will be in 4.2.4 if such a version is
	ever released.

2007-03-08  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_filled_polygon):
	Fix read beyond end of buffer found by valgrind.

	* src/datafile.c (df_tokenise):
	Fix uninitialized variable found by valgrind.

2007-03-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_line_unconditional): Check for user-defined
	line styles when choosing colors for front/back of hidden surfaces.
	Bugfix (back-ported from 4.3)

	* src/color.c (draw_color_smooth) src/graph3d.c (do_3dplot cntr3d_lines)
	src/misc.c (lp_use_properties):  Do not fail to initialize the structure
	passed to lp_use_properties().
	Bugfix (back-ported from 4.3)

2008-03-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_gets): Revert patch from 2008-03-04 because of
	problems reported in the development version. Revisit after 4.2.3.

2008-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_gets): Use readline() for reading inline data from
	pseudofile '-'.

	* src/graphics.c (boundary): Be more precise in estimating the vertical
	space required to accommodate rotated tick labels on x and x2 axes.
	Bug #1879907

	* PATCHLEVEL configure.in src/version.c:  Mark as patchlevel 3

	* NEWS docs/gnuplot.texi: Update in preparation for 4.2.3

	* share/Makefile.am: Correct error in generating distribution package.

2008-03-03  Ethan A Merritt  <merritt@u.washington.edu>
